fix alignment between button, input & select when on same line

--- a/src/www/themes/funky/css/theme.css
+++ b/src/www/themes/funky/css/theme.css
@@ -845,3 +845,7 @@ p.information {
 	padding: 0 10px;
 	border-bottom: 1px solid #ccc;
 }
+
+input, select {
+	vertical-align: middle;
+}
